<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="336dp"
        android:layout_height="88dp"
        android:fontFamily="monospace"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#0377F4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginBottom="400dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nom_hint"
        android:inputType="textShortMessage"
        android:text="@string/Nom"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginBottom="308dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prenom_hint"
        android:inputType="textShortMessage"
        android:text="@string/Prenom"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="208dp"
        android:text="@string/Suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>